--- a/src/thumbnail.html
+++ b/src/thumbnail.html
@@ -1,8 +1,12 @@
 <div class="thumbnail">
+  <div class="thumbnail__tag">#1</div>
+  <div class="thumbnail__tag_bottom"></div>
   <div class="card">
     <div class="card__like">
-      <div class="card__like_icon"></div>
-      2.1K
+      <div class="card__like_icon">
+        <div class="icon_border"></div>
+      </div>
+      2.1k
     </div>
   </div>
 </div>
